@@ -1,3 +1,5 @@
+- Added alternate format for setting the default partition. The user can specify the selected
+  volume UUID for the "Default Partition" key.
 - Implemented SPD memory automatic detection and injection,seems to work really great ...
 - Factorized code to prepare a dynamic memory detection algorithm ...
 - Optimized smbios table address search
